--- a/notes/styles.css
+++ b/notes/styles.css
@@ -26,6 +26,9 @@ section {
 dt {
     font-size: large;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 dd {
